syntax = "proto3";
// sys_role 角色
package role;
option go_package = "cloud/service/sys/role;role";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SysRoleObject 数据对象
message SysRoleObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:name" json:"name"
	optional string name = 2; //名称
	// @inject_tag: gorm:"column:code" json:"code"
	optional string code = 3; //编码
	// @inject_tag: gorm:"column:scope" json:"scope"
	optional int32 scope = 4; //数据范围:1:全部数据权限/2:自定数据权限/3:本部门数据权限/4:本部门及以下数据权限
	// @inject_tag: gorm:"column:scope_dept" json:"scopeDept"
	optional bytes scope_dept = 5; //数据范围(指定部门数组)
	// @inject_tag: gorm:"column:sort" json:"sort"
	optional int32 sort = 6; //排序
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 7; //状态:0正常/1停用
	// @inject_tag: gorm:"column:deleted" json:"deleted"
	optional int32 deleted = 8; //删除:0否/1是
	// @inject_tag: gorm:"column:tenant_id" json:"tenantId"
	optional int64 tenant_id = 9; //租户
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 10; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 11; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 12; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 13; //更新时间
}
// SysRoleTotalResponse 列表数据总量
message SysRoleTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysRoleCreateRequest 创建数据请求
message SysRoleCreateRequest {
	SysRoleObject data = 1;
}
// SysRoleCreateResponse 创建数据响应
message SysRoleCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysRoleUpdateRequest 更新数据请求
message SysRoleUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	SysRoleObject data = 2;
}
// SysRoleUpdateResponse 更新数据响应
message SysRoleUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SysRoleDeleteRequest 删除数据请求
message SysRoleDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysRoleDeleteResponse 删除数据响应
message SysRoleDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SysRoleRequest 查询单条数据请求
message SysRoleRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysRoleResponse 查询单条数据响应
message SysRoleResponse {
	int64 code = 1;
	string msg = 2;
	SysRoleObject data = 3;
}
// SysRoleRecoverRequest 恢复数据请求
message SysRoleRecoverRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysRoleRecoverResponse 删除数据响应
message SysRoleRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SysRoleDropRequest 清理数据请求
message SysRoleDropRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysRoleDropResponse 清理数据响应
message SysRoleDropResponse {
	int64 code = 1;
	string msg = 2;
}
// SysRoleCodeRequest 查询单条数据请求
message SysRoleCodeRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"code" json:"code"
	optional string code = 2; // 编码

}
// SysRoleCodeResponse 查询单条数据响应
message SysRoleCodeResponse {
	int64 code = 1;
	string msg = 2;
	SysRoleObject data = 3;
}
// SysRoleListRequest 列表数据
message SysRoleListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"code" json:"code"
	optional string code = 2; // 编码
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 4; // 状态:0正常/1停用
	// @inject_tag: db:"name" json:"name"
	optional string name = 5; // 名称

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 6; // 分页
}

// SysRoleListResponse 数据响应
message SysRoleListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SysRoleObject data = 3;
}
// SysRoleListTotalRequest 列表数据
message SysRoleListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"code" json:"code"
	optional string code = 2; // 编码
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 4; // 状态:0正常/1停用
	// @inject_tag: db:"name" json:"name"
	optional string name = 5; // 名称

}


// SysRoleService 服务
service SysRoleService{
	rpc SysRoleCreate(SysRoleCreateRequest) returns (SysRoleCreateResponse);
	rpc SysRoleUpdate(SysRoleUpdateRequest) returns (SysRoleUpdateResponse);
	rpc SysRoleDelete(SysRoleDeleteRequest) returns (SysRoleDeleteResponse);
	rpc SysRole(SysRoleRequest) returns (SysRoleResponse);
	rpc SysRoleRecover(SysRoleRecoverRequest) returns (SysRoleRecoverResponse);
	rpc SysRoleDrop(SysRoleDropRequest) returns (SysRoleDropResponse);
	rpc SysRoleCode(SysRoleCodeRequest) returns (SysRoleCodeResponse);
	rpc SysRoleList(SysRoleListRequest) returns (SysRoleListResponse);
	rpc SysRoleListTotal(SysRoleListTotalRequest) returns (SysRoleTotalResponse);
}